@@ -16,7 +16,7 @@
 // this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 // Place, Suite 330, Boston, MA  02111-1307  USA
 
-#include "reroot.h"
+#include "libc.h"
 
 FILE *fopen (char const *const restrict filename,
              char const *const restrict opentype)
